WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125659
Subpixel layout: RenderInline is not centered when child RenderTextControl's innerTextRenderer needs bias centering.
https://bugs.webkit.org/show_bug.cgi?id=125659
Summary
Subpixel layout: RenderInline is not centered when child RenderTextControl's ...
alan baradlay
Reported
2013-12-12 14:55:03 PST
Created
attachment 219123
[details]
test case with subpixel layout on, we calculate the innerTextRenderer's top logical position wrong and we push the parent element to upwards of one pixel (in default (top-to-bottom) mode)
Attachments
test case
(296 bytes, text/html)
2013-12-12 14:55 PST
,
alan baradlay
no flags
Details
Patch
(49.64 KB, patch)
2014-01-25 10:30 PST
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(544.52 KB, application/zip)
2014-01-25 11:44 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(527.65 KB, application/zip)
2014-01-25 12:17 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(501.38 KB, application/zip)
2014-01-25 12:53 PST
,
Build Bot
no flags
Details
Patch
(51.32 KB, patch)
2014-01-25 13:12 PST
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2013-12-12 15:23:56 PST
<
rdar://problem/15651368
>
alan baradlay
Comment 2
2013-12-12 19:49:02 PST
Placing the innerTextRenderer in RenderTextControlSingleLine::layout() needs to be subpixel compliant. innerTextRenderer->setLogicalTop(innerTextRenderer->logicalTop() - (logicalHeightDiff / 2 + layoutMod(logicalHeightDiff, 2)));
Jon Lee
Comment 3
2014-01-14 00:34:03 PST
<
rdar://problem/15651368
>
alan baradlay
Comment 4
2014-01-25 10:30:25 PST
Created
attachment 222216
[details]
Patch
Andreas Kling
Comment 5
2014-01-25 11:17:05 PST
Comment on
attachment 222216
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=222216&action=review
r=me
> Source/WebCore/rendering/RenderTextControlSingleLine.h:46 > + void centerRenderer(RenderBox& renderer) const;
Maybe we could call this centerInnerRenderer() to make it clear that it centers it within itself. Also we can omit the argument name here.
Andreas Kling
Comment 6
2014-01-25 11:17:56 PST
mac-wk2 says: Unexpected flakiness: text-only failures (1) editing/caret/caret-color.html [ Failure Pass ] Regressions: Unexpected text-only failures (1) fast/forms/search-vertical-alignment.html [ Failure ]
Build Bot
Comment 7
2014-01-25 11:44:16 PST
Comment on
attachment 222216
[details]
Patch
Attachment 222216
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4855899218771968
New failing tests: fast/forms/search-vertical-alignment.html
Build Bot
Comment 8
2014-01-25 11:44:18 PST
Created
attachment 222223
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 9
2014-01-25 12:17:13 PST
Comment on
attachment 222216
[details]
Patch
Attachment 222216
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5957994806247424
New failing tests: fast/forms/search-vertical-alignment.html
Build Bot
Comment 10
2014-01-25 12:17:17 PST
Created
attachment 222225
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 11
2014-01-25 12:53:06 PST
Comment on
attachment 222216
[details]
Patch
Attachment 222216
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4659595926568960
New failing tests: fast/forms/search-vertical-alignment.html
Build Bot
Comment 12
2014-01-25 12:53:09 PST
Created
attachment 222227
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan baradlay
Comment 13
2014-01-25 13:12:01 PST
Created
attachment 222229
[details]
Patch
alan baradlay
Comment 14
2014-01-25 13:12:24 PST
Comment on
attachment 222229
[details]
Patch EWS testing.
WebKit Commit Bot
Comment 15
2014-01-25 17:22:56 PST
Comment on
attachment 222229
[details]
Patch Clearing flags on attachment: 222229 Committed
r162791
: <
http://trac.webkit.org/changeset/162791
>
WebKit Commit Bot
Comment 16
2014-01-25 17:23:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug