Subpixel layout: RenderInline is not centered when child RenderTextControl's innerTextRenderer needs bias centering. https://bugs.webkit.org/show_bug.cgi?id=125659

Source/WebCore:

Reviewed by Andreas Kling

layoutMod(logicalHeightDiff, 2) fails to bias round when subpixel layout is enabled. It sets
the denominator value to 2, which returns incorrect modulo result.
(subpixel off: 3px % 2 = 1 vs subpixel on: (3px * 64) -> 192 % 2 = 0)

Covered by existing tests.

* platform/LayoutUnit.h:
* rendering/RenderSearchField.cpp:
(WebCore::RenderSearchField::centerContainerIfNeeded):
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::centerRenderer):
(WebCore::RenderTextControlSingleLine::layout):
* rendering/RenderTextControlSingleLine.h:

LayoutTests:

Reviewed by Andreas Kling.

layoutMod(logicalHeightDiff, 2) fails to bias round when subpixel layout is enabled. It sets
the denominator value to 2, which returns incorrect modulo result.
(subpixel off: 3px % 2 = 1 vs subpixel on: (3px * 64) -> 192 % 2 = 0)

Covered by existing tests.

* platform/mac/fast/block/float/032-expected.txt:
* platform/mac/fast/forms/search-vertical-alignment-expected.png:
* platform/mac/fast/forms/search-vertical-alignment-expected.txt:
* platform/mac-mountainlion/fast/forms/search-vertical-alignment-expected.txt:


Canonical link: https://commits.webkit.org/145655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162791 268f45cc-cd09-0410-ab3c-d52691b4dbfc